# Fagent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  config.rs  context.rs  error.rs  executor.rs  lib.rs  main.rs  plan.rs  security.rs  ui.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
